--- a/shit-list-ui/src/app/shared/components/configuration-dialog/configuration-dialog.component.html
+++ b/shit-list-ui/src/app/shared/components/configuration-dialog/configuration-dialog.component.html
@@ -12,7 +12,7 @@
   <p>
     <mat-form-field appearance="outline">
       <mat-label>Access key</mat-label>
-      <input matInput type='password' [(ngModel)]="configuration.accessToken" autocomplete="off" />
+      <input matInput type="password" [(ngModel)]="configuration.accessToken" autocomplete="off" />
       <mat-hint></mat-hint>
     </mat-form-field>
   </p>
@@ -20,7 +20,5 @@
 
 <div mat-dialog-actions>
   <button mat-button (click)="onCancel()">Cancel</button>
-  <button mat-raised-button [mat-dialog-close]="configuration" color="primary">
-    Save
-  </button>
+  <button mat-raised-button [mat-dialog-close]="configuration" color="primary">Save</button>
 </div>
